# cpp_ornament

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/common/: utils.cpp  utils.hpp
apps/consoleapp/: CMakeLists.txt  main.cpp
apps/glfwapp/: App.cpp  App.hpp  CMakeLists.txt  examples.cpp  examples.hpp  main.cpp  utils.cpp
scripts/: configure.sh  run.sh
src/: CMakeLists.txt
src/ornament/: Bvh.cpp  Bvh.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  GpuStructs.hpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.hpp  State.cpp  State.hpp  global_structs_helper.cpp  global_structs_helper.hpp  ornament.hpp
src/ornament/hip/: PathTracer.cpp  PathTracer.hpp  buffers.hpp  hip_helper.hpp
src/ornament/hip/kernals/: CMakeLists.txt  GlobalConstants.hip.hpp  GlobalStructs.hip.hpp  bvh.hip.hpp  camera.hip.hpp  constant_params.hip.hpp  constants.hip.hpp  global_structs.hip.hpp  hitrecord.hip.hpp  kernal_params.hip.hpp  material.hip.hpp  pathtracer.hip.cpp  random.hip.hpp  ray.hip.hpp  transform.hip.hpp  vec_math.hip.hpp
src/ornament/math/: Aabb.cpp  Aabb.hpp  math.cpp  math.hpp  transform.cpp  transform.hpp
